# nextbike-stats

./: .gitignore  Cargo.toml
frontend/: base.css  base.js  index.html
frontend/leaflet/: AnimatedMarker.js
src/: main.rs
