[package]
name = "nextbike-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = "0.29.0"
serde = "1.0.178"
serde_derive = "1.0.178"
serde_json = "1.0.104"
tokio = { version = "1", features = ["full"] }
